<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DB1C8F"
    android:backgroundTint="#CF8AE0"
    android:layerType="software"
    android:scrollbarSize="4dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="171dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:text="@string/bahar_s_homework"
        android:textColor="#435A83"
        android:textColorHighlight="#E82020"
        android:textColorHint="#2196F3"
        android:textColorLink="#FF9800"
        android:textDirection="firstStrongRtl"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.965"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.106" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="0dp"
        android:background="#2196F3"
        android:contentDescription="@string/todo"
        android:src="#83E108"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="300dp"
        android:layout_marginBottom="80dp"
        android:background="#41AB5B"

        android:backgroundTint="#8F2CB9"
        android:contentDescription="@string/TODO"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ContentDescription"
        tools:srcCompat="@android:mipmap/sym_def_app_icon" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="86dp"
        android:background="#9C27B0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.79" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="370dp"
        android:layout_height="75dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif-black"
        android:foregroundTint="#182CDE"
        android:text="@string/how_many_stars_would_you_give_this_app"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/ratingBar"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:layout_width="204dp"
        android:layout_height="91dp"
        android:layout_gravity="end"
        android:layout_marginStart="148dp"
        android:autofillHints=""
        android:hint="@string/app_name"
        android:shadowColor="#46EC17"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextFields" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@color/teal_200"
        android:text="@string/touch_me"
        android:textColor="@color/purple_200"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="400dp" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/internet"
        android:textSize="30sp"
        tools:ignore="MissingConstraints,UseSwitchCompatOrMaterialXml"
        tools:layout_editor_absoluteY="300dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />


    <TimePicker
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:amPmTextColor="#E34242"
        android:headerBackground="@android:drawable/button_onoff_indicator_on" />

    <CheckedTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>